--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Добавить фильм, сериал, аниме</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Фильмы и сериалы</a>
-        <div class="collapse navbar-collapse">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="index.html">
+            <i class="fas fa-film"></i> Фильмы и сериалы
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Новый фильм</a>
+                    <a class="nav-link" href="index.html">
+                        <i class="fas fa-plus"></i> Новый фильм
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="list.html">Мои фильмы</a>
+                    <a class="nav-link" href="list.html">
+                        <i class="fas fa-list"></i> Мои фильмы
+                    </a>
                 </li>
             </ul>
         </div>
     </nav>
+
     <div class="container mt-5">
         <h1 class="text-center">Добавить фильм, сериал, аниме</h1>
         <form id="addForm">
@@ -50,7 +64,7 @@
                 <label for="episodeDuration">Продолжительность одной серии (в минутах)</label>
                 <input type="number" class="form-control" id="episodeDuration" placeholder="Введите продолжительность одной серии">
             </div>
-            <button type="submit" class="btn btn-primary">Добавить</button>
+            <button type="submit" class="btn btn-primary btn-block">Добавить</button>
         </form>
     </div>
     <script src="script.js"></script>
